Update generated client and allow custom images
